[tool.poetry]
name = "modzfn-lobby"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fortnitepy = "^3.4.0"
sanic = "^21.3.2"
uvloop = "^0.15.2"
aioconsole = "^0.3.1"
aiohttp = "^3.7.4"
crayons = "^0.4.0"
pypresence = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
